# cpp-raytracer

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  convert.py  main.cpp  math_utils.hpp  postprocess.py  refactor.md  requirements.txt
src/: camera.cpp  camera.hpp  color.cpp  color.hpp  image.cpp  image.hpp  intersectable.cpp  intersectable.hpp  intersection.hpp  light.cpp  light.hpp  main.cpp  material.cpp  material.hpp  math_utils.hpp  params.hpp  random.cpp  random.hpp  ray.cpp  ray.hpp  renderer.cpp  renderer.hpp  sampling.hpp  sampling_utils.hpp  save_render.hpp  scene.cpp  scene.hpp  shape.cpp  shape.hpp  supersampling.cpp  supersampling.hpp  test.cpp  trace.cpp  trace.hpp  utils.hpp  vector3.cpp  vector3.hpp  vectors.cpp  vectors.hpp
tests/: test_camera.cpp  test_integration.cpp  test_light.cpp  test_random.cpp  test_ray.cpp  test_renderer.cpp  test_shape.cpp  test_vectors.cpp
